# tasks_service

./: .gitignore  pyproject.toml
core/: db.sqlite3  urls.py
core/settings/: base.py  local.py  prod.py
modules/boards/: apps.py  models.py
modules/boards/api/v1/: filters.py  serializers.py  views.py
modules/boards/migrations/: 0001_initial.py  0002_alter_board_description.py  0003_boardstatus.py  0004_remove_boardstatus_description.py
modules/config/: admin.py  apps.py  models.py
modules/config/api/v1/: serializers.py  views.py
modules/config/migrations/: 0001_initial.py
modules/tasks/: admin.py  models.py
modules/tasks/api/v1/: filters.py  serializers.py  views.py
modules/tasks/migrations/: 0001_initial.py  0002_task_status.py  0003_task_board.py  0004_alter_task_description_alter_taskstatus_description.py  0005_alter_task_status_rename_title_task_name_and_more.py
tasks_service_db/: docker-compose.yml
